--- a/doorctl-api.cabal
+++ b/doorctl-api.cabal
@@ -7,7 +7,11 @@ library
   build-depends:
       aeson
     , base <5
+    , base64
+    , bytestring
     , servant
+    , text
+    , time
 
   hs-source-dirs: src
 
